Location-selector and map min-widths Additionally, prevent their overlap

--- a/src/client/css-styles/styles-universal.css
+++ b/src/client/css-styles/styles-universal.css
@@ -6,6 +6,11 @@ html, body {
     padding:0;
 }
 
+
+.full-width {
+    width: 100%;
+}
+
 .bordered {
     border: 1px solid;
     margin: 5px;
